# MuseHeart-MusicBot

./: .Dockerfile  .dockerignore  .env-example  .example.application.yml  .example.env  .gitignore  .gitpod.yml  .replit  Dockerfile  HEROKU_TUTORIAL.md  LICENSE  MONGODB_SETUP.md  Procfile  README.md  REPLIT_TUTORIAL.md  SPOTIFY_IDS.md  app.json  application.yml  config.json  config_loader.py  configs.py  discloud.config.example  install_deps.bat  install_deps.sh  keep_alive.py  lavalink.ini.example  main.py  nixpacks.toml  pom.xml  preview.py  pyproject.toml  quick_setup.sh  quick_update.sh  railway.toml  render.yaml  replit.nix  requirements.txt  run.bat  run.sh  setup.bat  (+21 more)
deploy_handlers/: gitpod.sh  heroku_auto_update.sh  heroku_web.sh  replit.sh
modules/: ai_recommendations.py  error_handler.py  fav_manager.py  guild_fav_manager.py  help_cog.py  integration_manager.py  lastfm.py  legacy_cmds.py  ll_yt_oauth.py  misc.py  music.py  music_settings.py  owner.py  player_resume.py  server_manager.py  skin_editor.py  synced_lyrics.py  testmodule.py
templates/: preview.html
utils/: client.py  db.py  others.py  owner_panel.py
utils/music/: autocomplete.py  checks.py  converters.py  errors.py  filters.py  interactions.py  lastfm.py  lastfm_tools.py  local_lavalink.py  models.py  remote_lavalink_serverlist.py  skin_utils.py  spotify.py  track_encoder.py  youtube_trusted_session_generator.py  ytdl_tools.py
utils/music/audio_sources/: deezer.py  spotify.py
utils/music/skins/: classic.py  default.py  default_progressbar.py  embed_link.py  lite_default.py  mini.py  others.py
utils/music/skins/normal_player/: classic.py  default.py  default_progressbar.py  embed_link.py  lite.py  micro_controller.py  micro_nc.py  mini.py  minimalist.py  miniplayer.py
utils/music/skins/static_player/: classic.py  default.py  default_progressbar.py  embed_link.py  mini.py
wavelink/: __init__.py  backoff.py  client.py  errors.py  events.py  node.py  player.py  stats.py  websocket.py
