[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["xRitsu <https://github.com/zRitsu>"]
description = ""
name = "py-music-bot-disnake"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
disnake = {git = "https://github.com/DisnakeDev/disnake.git", rev = "d1e88af8e7aef629466bb47986bfb9223bea0f64"}
wavelink = {git = "https://github.com/zRitsu/Wavelink.git", rev = "7d939eef78b4203ba6afef6fe31dfae8d9c443bc"}
python-dotenv = "^0.20.0"
asyncspotify = {git = "https://github.com/Run1e/asyncspotify.git"}
user-agent = "^0.1.10"
requests = "^2.28.1"
humanize = "^4.2.3"
tornado = "^6.2"
motor = "^3.0.0"
dnspython = "^2.2.1"
psutil = "^5.9.1"
aiofiles = "^0.8.0"
disnake-jishaku = "^2.6.5"
